[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["zhangkang <zhangkang@rt-thread.com>"]

[dependencies]
macros = { path = "macros", version = "=0.1.0" }

[build-dependencies]
chrono = "*"
toml = "*"

[package.metadata]
NAME_MAX = 8
THREAD_PRIORITY_MAX = 32
ALIGN_SIZE = 8
