[package]
name = "rt-spark"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["zhangkang <zhangkang@rt-thread.com>"]

[[bin]]
name = "rtthread"
path = "bin.rs"

[dependencies]
kernel = { path = "../../.." }
libcpu = { path = "../../../libcpu" }
components = { path = "../../../components" }
